[gd_scene load_steps=4 format=2]

[ext_resource path="res://world/assets/doors/wooden_door.png" type="Texture" id=1]
[ext_resource path="res://world/assets/doors/Door_next_floor.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.9397, 24.2593 )

[node name="Door_next_floor" type="Area2D"]
scale = Vector2( 3, 3 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -11.4908, 11.4908 )
scale = Vector2( 1.28182, 1.28182 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -11.3158, 18.1172 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
margin_left = 3.46088
margin_top = -6.60714
margin_right = 43.4609
margin_bottom = 7.39286
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="." to="." method="_on_Door_next_floor_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Door_next_floor_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
